# systolic_accelerator

./: .gitignore  .library_mapping.xml  .project  CMakeLists.txt  Makefile  README.md  main.mk  shell.nix  test.mk
make_files/: macv2.mk  main.mk
route/: config.mk  constraint.sdc
spm/config/: config.mk  constraint.sdc
spm/src/: spm.v
src/: Control.v  MAC.sv  MAC.v  MACV2.sv  MACV3.v  Top.sv  Top.v
testbenches/: MACV2_tb.cpp  MAC_tb.cpp  Top_tb.cpp
testing/: Test.sv  Test.v  Test_tb.cpp  test_control.v  test_mac.sv  test_mac.v
